--- a/WebStore1p/WebStore1p.csproj
+++ b/WebStore1p/WebStore1p.csproj
@@ -11,6 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\WebStore.DAL\WebStore.DAL.csproj" />
     <ProjectReference Include="..\WebStore1p.Domain\WebStore1p.Domain.csproj" />
   </ItemGroup>
 
