--- a/WebStore1p/appsettings.json
+++ b/WebStore1p/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=WebStore-DBp;Integrated Security=True"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -6,6 +9,6 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "CustomGreetings"  :  "Hello from my first ASP.Net Core App!!!",
+  "CustomGreetings": "Hello from my first ASP.Net Core App!!!",
   "AllowedHosts": "*"
 }
