--- a/WebStore1p/WebStore1p.csproj
+++ b/WebStore1p/WebStore1p.csproj
@@ -21,4 +21,8 @@
     <ProjectReference Include="..\WebStore1p.Domain\WebStore1p.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Views\Cart\" />
+  </ItemGroup>
+
 </Project>
