--- a/WebStore1p/WebStore1p.csproj
+++ b/WebStore1p/WebStore1p.csproj
@@ -21,4 +21,9 @@
     <ProjectReference Include="..\WebStore1p.Domain\WebStore1p.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Areas\Admin\Data\" />
+    <Folder Include="Areas\Admin\Models\" />
+  </ItemGroup>
+
 </Project>
