Область администратора - развитие

--- a/WebStore1p/WebStore1p.csproj
+++ b/WebStore1p/WebStore1p.csproj
@@ -4,6 +4,21 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <!--<ItemGroup>
+    <Compile Remove="Views\Shared\Components\Brands\**" />
+    <Compile Remove="Views\Shared\Components\UserInfo\**" />
+    <Content Remove="Views\Shared\Components\Brands\**" />
+    <Content Remove="Views\Shared\Components\UserInfo\**" />
+    <EmbeddedResource Remove="Views\Shared\Components\Brands\**" />
+    <EmbeddedResource Remove="Views\Shared\Components\UserInfo\**" />
+    <None Remove="Views\Shared\Components\Brands\**" />
+    <None Remove="Views\Shared\Components\UserInfo\**" />
+  </ItemGroup>-->
+
+  <ItemGroup>
+    <Content Remove="Views\Shared\Components\Default.cshtml" />
+  </ItemGroup>
+
   <ItemGroup>
     <PackageReference Include="BuildBundlerMinifier" Version="3.2.449" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="3.1.5" />
@@ -24,6 +39,7 @@
   <ItemGroup>
     <Folder Include="Areas\Admin\Data\" />
     <Folder Include="Areas\Admin\Models\" />
+    <Folder Include="Areas\Admin\Views\Products\" />
   </ItemGroup>
 
 </Project>
